// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot Button large 1`] = `
<View
  style={{}}
  testID="container-button"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E95814",
        "borderRadius": 12,
        "borderWidth": 0,
        "display": "flex",
        "height": 64,
        "justifyContent": "center",
        "minWidth": 64,
        "opacity": 1,
        "paddingHorizontal": 32,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#FFFFFF",
          "flexShrink": 1,
          "fontFamily": "Averta CY",
          "fontSize": 16,
          "fontWeight": "bold",
          "letterSpacing": -0.02,
          "lineHeight": 19,
        }
      }
      testID="text-with-icon"
    >
      Clique me
    </Text>
  </View>
</View>
`;

exports[`Button snapshot Button medium 1`] = `
<View
  style={{}}
  testID="container-button"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E95814",
        "borderRadius": 12,
        "borderWidth": 0,
        "display": "flex",
        "height": 48,
        "justifyContent": "center",
        "minWidth": 48,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#FFFFFF",
          "flexShrink": 1,
          "fontFamily": "Averta CY",
          "fontSize": 16,
          "fontWeight": "bold",
          "letterSpacing": -0.02,
          "lineHeight": 19,
        }
      }
      testID="text-with-icon"
    >
      Clique me
    </Text>
  </View>
</View>
`;

exports[`Button snapshot Button small 1`] = `
<View
  style={{}}
  testID="container-button"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E95814",
        "borderRadius": 12,
        "borderWidth": 0,
        "display": "flex",
        "height": 30,
        "justifyContent": "center",
        "minWidth": 30,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#FFFFFF",
          "flexShrink": 1,
          "fontFamily": "Averta CY",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": -0.02,
          "lineHeight": 17,
        }
      }
      testID="text-with-icon"
    >
      Clique me
    </Text>
  </View>
</View>
`;

exports[`Button snapshot default 1`] = `
<View
  style={{}}
  testID="container-button"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E95814",
        "borderRadius": 12,
        "borderWidth": 0,
        "display": "flex",
        "height": 48,
        "justifyContent": "center",
        "minWidth": 48,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#FFFFFF",
          "flexShrink": 1,
          "fontFamily": "Averta CY",
          "fontSize": 16,
          "fontWeight": "bold",
          "letterSpacing": -0.02,
          "lineHeight": 19,
        }
      }
      testID="text-with-icon"
    >
      Clique me
    </Text>
  </View>
</View>
`;
